[package]
name = "rpallet-gateway"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
bitmask = { version = "0.5.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "2.1.2", features = ["derive"], default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }

# substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }

# substrate runtime module
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }

# orml
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "27e3272d322dcdd915f0fc2002032e8d53a46523", version = "0.4.1-dev", default-features = false }

# rio
rp-base = { path = "../../primitives/base", default-features = false }
rp-support = { path = "../../primitives/support", default-features = false }

[dev-dependencies]
collective = { package = "pallet-collective", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
rpallet-assets = { path = "../assets" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "bitmask/std",

  "sp-std/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-io/std",
  "scale-info/std",

  "frame-support/std",
  "frame-system/std",

  "orml-traits/std",

  "rp-base/std",
  "rp-support/std",
  "pallet-sudo/std",
]
