[package]
name = "rio-gateway-rpc-runtime-api"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "1.0", features = ["derive"], default-features = false }

rp-base = { path = "../../../../primitives/base", default-features = false }
rpallet-gateway = { path = "../../", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",

  "sp-api/std",
  "sp-std/std",
  "sp-runtime/std",

  "rpallet-gateway/std",
]
